--- a/src/less/history-component.less
+++ b/src/less/history-component.less
@@ -1,37 +1,47 @@
 .history-component {
+    #sidebar-tabs-container a{display:block}
 
     display: flex;
     font-size: 1.5rem;
     flex-flow: column nowrap;
     align-items: center;
-    width: 250px;
+    width: 18vw;
     height: 50vh;
     margin-top: 20%;
-    margin-right: 5%;
+    margin-left: -22% !important;
     border: solid white 2px;
+    margin-left: 50%;
     border-radius: 20px;
     overflow: scroll;
 
+    .guess {
+        font-size: 16px;
+        margin: 0;
+    }
     .historyContainer {
+        min-height: 160px; //FIX for Safari collapse;
         display: flex;
         flex-flow: column nowrap;
         align-items: center;
         border-bottom: solid white 2px;
-        width: 100%;
-        margin: -5%;
-    }
-    h6 {
-        font-size: 1rem;
-        width: 50%;
-    }
-    p {
-        font-size: 0.75rem;
-    }
+        margin-bottom: 5%;
+
+        h6 {
+            font-size: 1rem;
+            width: 5vw;
+            margin: 0 !important;
+            padding: 0;
+        }
+
+        .hint {
+            font-size: 0.75rem;
+            width: 15vw;
+            }
+
+        }
+
     .norse {
         font-size: 2rem;
-    }
-
-    .header {
     }
 
 }
