--- a/src/less/instructions-component.less
+++ b/src/less/instructions-component.less
@@ -5,8 +5,8 @@
     align-items: center;
     width: 250px;
     height: 50vh;
-    margin-top: 20%;
-    margin-left: 5%;
+    margin-top: 13%;
+    margin-left: 4%;
     border: solid white 2px;
     border-radius: 20px;
     overflow: scroll;
